<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="clip_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="335dp"
        android:contentDescription="@string/shoe"
        android:src="@drawable/shoesplash" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@id/imageView"
        android:gravity="center_horizontal"
        android:text="@string/sneaker_sizer"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_below="@id/textView2"
        android:gravity="center_horizontal"
        android:text="@string/synopsis"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_below="@id/textView3"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="enterManual"
            android:text="@string/manual_input" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="enter"
            android:text="@string/use_shoes" />
    </LinearLayout>

</RelativeLayout>