<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chooserOwnedActivity">

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TableRow
            android:id="@+id/heading_useshoes_row"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/heading_manual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C5F48F"
                android:gravity="center_horizontal"
                android:text="@string/use_shoes"
                android:textSize="20sp"
                android:textStyle="bold" />


        </TableRow>


        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>


        <TableRow
            android:id="@+id/gender_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/genderlabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_gender1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_men"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:text="@string/men_s" />

                <RadioButton
                    android:id="@+id/radio_women"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:text="@string/women_s" />
            </RadioGroup>
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>

        <TableRow
            android:id="@+id/sizing_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/lengthlabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/sizing"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_size_region"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioSizeUS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:onClick="populateSizes"
                        android:text="@string/us_sizing" />

                    <RadioButton
                        android:id="@+id/radioSizeEU"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:onClick="populateSizes"
                        android:text="@string/eu_sizing" />

                </RadioGroup>

                <Spinner
                    android:id="@+id/spinnerSizes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>

        <TableRow
            android:id="@+id/brand_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/widthlabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/brand"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerBrands"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>

        <TableRow
            android:id="@+id/model_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/modellabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/models"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerModels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TableRow
            android:id="@+id/heading_newshoes_row"
            android:layout_weight="2">

            <TextView
                android:id="@+id/heading_new_shoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C5F48F"
                android:gravity="center_horizontal"
                android:text="@string/new_shoes"
                android:textSize="20sp"
                android:textStyle="bold" />


        </TableRow>


        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>


        <TableRow
            android:id="@+id/gender_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/genderlabel2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_gender2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mens2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:text="@string/men_s" />

                <RadioButton
                    android:id="@+id/womens2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:text="@string/women_s" />
            </RadioGroup>
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>

        <TableRow
            android:id="@+id/brand_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/brandlabel2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/brand"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerBrands2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

        </TableRow>

        <TableRow
            android:id="@+id/model_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/modellabel2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/models"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerModels2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#A6ECD5"
            android:onClick="getResults"
            android:text="@string/buttonmain" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />


</LinearLayout>